[gd_scene load_steps=7 format=2]

[ext_resource path="res://Archeologicaps.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://images/gui/menu_bg.png" type="Texture" id=3]
[ext_resource path="res://sounds/rollover2.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/click4.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 60.0
custom_constants/margin_top = 60

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 64.0
margin_right = 640.0
margin_bottom = 103.0
custom_colors/font_color = Color( 0.270588, 0.101961, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "Temple Raider"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 107.0
margin_right = 640.0
margin_bottom = 237.0
custom_constants/margin_top = 130

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 241.0
margin_right = 640.0
margin_bottom = 334.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/CenterContainer"]
margin_left = 265.0
margin_right = 375.0
margin_bottom = 93.0

[node name="NewGame" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 110.0
margin_bottom = 40.0
rect_min_size = Vector2( 110, 40 )
text = "New Game"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 110.0
margin_bottom = 49.0
custom_constants/margin_top = 5

[node name="Controls" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 110.0
margin_bottom = 93.0
rect_min_size = Vector2( 110, 40 )
text = "Settings"

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "GUI"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/CenterContainer/VBoxContainer/NewGame" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CenterContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/CenterContainer/VBoxContainer/Controls" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CenterContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="finished" from="ButtonClick" to="." method="_on_ButtonClick_finished"]
